name:                acid-auth-password
version:             0.1.0.0
synopsis:            Password credential store based on acid-state
description:         Password credential store based on acid-state
homepage:            https://github.com/frasertweedale/hs-acid-auth-password
bug-reports:         https://github.com/frasertweedale/hs-acid-auth-password/issues
license:             AGPL-3
license-file:        agpl-3.0.txt
extra-source-files:
  README.md
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2013  Fraser Tweedale
category:            Web  -- FIXME
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-acid-auth-password.git

library
  hs-source-dirs: src

  default-language:    Haskell2010

  ghc-options:  -Werror -Wall

  build-depends:
    base >=4.6 && <4.7
    , mtl == 2.1.*
    , safecopy == 0.8.*
    , acid-state == 0.12.*
    , containers == 0.5.*
    , scrypt == 0.5.*

  exposed-modules:
    Data.Acid.Auth.Password
